# Routes/LodziarniaRoutes.js
@@ -4,5 +4,6 @@ const router = express.Router()
 const LodziarniaController = require('../Controllers/LodziarniaController')
 
 router.post('/register',auth,LodziarniaController.register)
+router.post('/taste/add',auth,LodziarniaController.addTaste)
 
 module.exports = router
